--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.0.4-canary.29",
+    "next": "14.2",
     "react": "^18",
     "react-dom": "^18"
   },
